--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: Set Node.js 10.x
-        uses: actions/setup-node@1.2.0
+        uses: actions/setup-node@v1.2.0
         with:
           node-version: 10.x
 
