--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
+    "release": "yarn install && yarn run test && yarn run build && rm -rf node_modules && yarn install --production",
     "test": "jest"
   },
   "repository": {
