--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,13 @@
-name: 'Setup Arduino CLI'
-description: 'Download Arduino CLI and add it to the PATH'
-author: 'Arduino'
+name: "Setup Arduino CLI"
+description: "Download Arduino CLI and add it to the PATH"
+author: "Arduino"
 inputs:
   version:
-    description: 'Version to use. Example: 0.5.0'
-    default: '0.x'
+    description: "Version to use. Example: 0.5.0"
+    default: "0.x"
 runs:
-  using: 'node12'
-  main: 'lib/main.js'
+  using: "node12"
+  main: "dist/index.js"
 branding:
-  icon: 'box'
-  color: 'green'
+  icon: "box"
+  color: "green"
