--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ inputs:
   version:
     description: "Version to use. Example: 0.5.0"
     default: "0.x"
+  token:
+    description: "Personal access token (PAT) used to call the Github API."
+    required: false
+    default: ${{ github.token }}
 runs:
   using: "node12"
   main: "dist/index.js"
