--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "author": "Arduino",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.0.0",
-    "@actions/tool-cache": "^1.1.0",
+    "@actions/core": "^1.2.4",
+    "@actions/http-client": "^1.0.8",
+    "@actions/tool-cache": "^1.6.0",
     "semver": "^6.1.1"
   },
   "devDependencies": {
-    "@actions/io": "^1.0.0",
+    "@actions/io": "^1.0.2",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
     "@types/semver": "^6.0.0",
