--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@actions/http-client": "^1.0.9",
-    "@actions/tool-cache": "^1.6.1",
+    "@actions/http-client": "^1.0.8",
+    "@actions/tool-cache": "^1.6.0",
     "semver": "^6.1.1"
   },
   "devDependencies": {
     "@actions/io": "^1.0.2",
     "@types/jest": "^24.0.13",
-    "@types/node": "^12.19.8",
-    "@types/semver": "^6.2.2",
-    "@vercel/ncc": "^0.25.1",
-    "jest": "^26.6.3",
+    "@types/node": "^12.0.4",
+    "@types/semver": "^6.0.0",
+    "@zeit/ncc": "^0.22.3",
+    "jest": "^26.1.0",
     "jest-circus": "^24.7.1",
     "nock": "^10.0.6",
     "prettier": "^1.17.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^3.9.7"
+    "ts-jest": "^26.1.4",
+    "typescript": "^3.5.1"
   }
 }
